[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ghhops_server"
author = "Robert McNeel & Associates"
author-email = "ehsan@mcneel.com"
home-page = "https://github.com/mcneel/compute.rhino3d/tree/master/src/ghhops-server-py"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ['rhino3dm']


[tool.flit.sdist]
exclude = [".vscode/", "docs/", "dist/", "examples/", ".env", "Pipfile", "Pipfile.lock", "README.md"]